# tools

./: README.md
dsa40applicationhelper/backend/: .gitignore  README.md  pyproject.toml
dsa40applicationhelper/backend/app/: database.py  main.py  models.py  schemas.py
dsa40applicationhelper/backend/app/core/: conditions_util.py  config.py  mapping.py  models.py  operator.py  transform.py  util.py
dsa40applicationhelper/backend/app/data/: app.db  platform_info.json  questions.json  questions_all.json
dsa40applicationhelper/backend/app/data/questions/: Apple.json  Bing.json  Google.json  LinkedIn.json  Mastodon.json  Meta.json  MySpace.json  Pinterest.json  Snap.json  TikTok.json  X.com.json  YouTube.json
dsa40applicationhelper/backend/app/data/vlopses/: Apple_meta.txt  Bing_meta.txt  Google_meta.txt  LinkedIn_meta.txt  Meta_meta.txt  (+17 more)
dsa40applicationhelper/backend/app/routers/: form.py  health.py  questions.py  vlopse.py
dsa40applicationhelper/backend/app/services/: condition_service.py  form_engine.py  mapping.py  questions.py  vlopse.py
dsa40applicationhelper/backend/scripts/: fill_database.py  forms_tsv_to_json_dumps.py  load_general_questions.py  load_vlopse_mappings.py  load_vlopse_questions.py  restore_vlopse_platform_info.py  write_dsa_questions.py
dsa40applicationhelper/backend/tests/: test_api.py  test_conditions_util.py  test_exceptions.py  test_form_engine.py  test_transformer.py
dsa40applicationhelper/backend/tests/api/: test_form.py  test_question.py  test_vlopse.py
dsa40applicationhelper/backend/tests/resources/: tiktok_questions.json
(+61 files in other folders)
