[project]
name = "backend"
version = "0.2.0"
description = "DSA40 Application Helper — FastAPI backend"
readme = "README.md"
authors = [{ name = "Luis Glaser", email = "l.glaser@comprensio.ai" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "pycountry>=26.2.16",
    "sqlalchemy>=2.0.48",
]
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "requests>=2.33.1",
    "ruff>=0.12.7",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["*.py"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "T20"]

ignore = [
    "T201",
]


[tool.basedpyright]
venvPath = "."
venv = ".venv"
